<resources>
    <string name="app_name">Wave</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_set_profil">setProfil</string>
    <string name="title_activity_acceuil">acceuil</string>
    <string name="button">Button</string>
    <string name="adresse_e_mail">Adresse e-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="mdp_oublie">Nom d\'utilisateur ou mot de passe oublié ?</string>
    <string name="annuler">Annuler</string>
    <string name="title_activity_tab4">tab4</string>
    <string name="pr_nom">Nom d\'utilisateur</string>
    <string name="nom">Nom</string>
    <string name="d_te_de_naissance">Date de naissance</string>
    <string name="title_activity_forgot_password">forgotPassword</string>
    <string name="saisi_mdp_oublie">Saisissez votre e-mail et nous vous enverrons des instructions pour réinitialiser votre mot de passe.</string>
    <string name="soumettre">Soumettre</string>
    <string name="Nom">Nom</string>
    <string name="Bio">Bio</string>
    <string name="Localisation">Localisation</string>
    <string name="SiteWeb">Site Web</string>
    <string name="DateDeNaissance">Date de naissance</string>
    <string name="Save">Enregistrer</string>
    <string name="Photodecouverture">Photo de couverture</string>
    <string name="ProfilPicture">Photo de profil</string>
    <string name="title_activity_spotify_login">spotify_login</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirmermdp">Confirmez votre mot de passe</string>
    <string name="seconnecter">Se connecter</string>
    <string name="title_activity_display_profil">displayProfil</string>
    <string name="title_activity_show_profil">show_profil</string>
</resources>