<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lantien.bediss.wave.Login"
    android:background="#FFFF"
    >

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"

        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="460dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view2"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="460dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/login"
        android:layout_width="177dp"
        android:layout_height="32dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/buttonlogin1"
        android:text="Se connecter"
        android:textColor="#F35B57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <EditText
        android:id="@+id/email"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/adresse_e_mail"
        android:inputType="textEmailAddress"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="141dp"
        android:layout_height="18dp"
        android:layout_marginBottom="320dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:onClick="switchToForgotPassword"
        android:text="@string/mot_de_passe_oubli"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/annuler"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backButton"
        android:clickable="true"/>

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonsignup1"
        android:fontFamily="@font/roboto"
        android:text="facebook"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/inscri_button"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonlogin1"
        android:fontFamily="@font/roboto"
        android:text="Google"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="450dp"
        android:text="Connecter vous avec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>